--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -21,10 +21,14 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-body {
-    line-height: 1.42857143;
-    color: #333;
-}
+
+
+/*
+#####################################################################
+###                     general modification                      ###
+#####################################################################
+###   TODO: cleanse this document of this abomination!
+*/
 
 h1 {
     text-align:center;
@@ -39,79 +43,49 @@ table {
     border-bottom-right-radius: 3px;
 }
 
-.screenFillingDiv {
-    max-height: 70vh; /* For 100% screen height */
-}
+
+/*
+#####################################################################
+###                        center class                           ###
+#####################################################################
+*/
 
 table.center {
     margin-left:auto;
     margin-right:auto;
+
+    /*experiment*/
+    table-layout:fixed;
+    width:100% !important;
 }
 
-table td {
-    font-size: 12px;
-    text-align: center;
-    vertical-align: middle;
-    border-right: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    padding: 6px;
+table.center th {
+    width:100%;
 }
 
-table th {
-    text-align: center;
-    color: #488cf9 !important;
-    background-color:#efefef !important;
-
-    font-size: 16px;
-    border-bottom:1px solid #ddd;
-    border-right: 1px solid #ddd;
-    padding: 8px;
+table.center td {
+    padding:0px;
+    width:100%
 }
 
-.sortheader {
-    color: #488cf9 !important;
-    background-color:#efefef !important;
+/*
+#####################################################################
+###                         pch class                             ###
+###    General class for ensuring not to harm non-pcm elements    ###
+#####################################################################
+*/
+
+input.pch {
+    text-align:center;
 }
 
 
-
-table th:first-child {
-    border-left: 0px;
+table.pch body {
+    line-height: 1.42857143;
+    color: #333;
 }
 
-table th:last-child {
-    border-right: 0px;
-}
-
-table tr:last-child td:first-child {
-    border-bottom: 0px;
-}
-
-table tr:last-child td:last-child {
-    border-bottom: 0px;
-}
-
-table tr td:first-child {
-    border-left:0px;
-}
-
-table tr td:last-child {
-    border-right:0px;
-}
-
-table groupBody td:last-child {
-    border-right:21px;
-}
-
-button {
-    margin:auto;
-    display:block;
-
-    align:center;
-    font-size: 16px;
-}
-
-table caption {
+table.pch caption {
 
 	background-color: #383838;
     color:white;
@@ -127,6 +101,67 @@ table caption {
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
 }
+
+table.pch  td {
+    font-size: 12px;
+    text-align: center;
+    vertical-align: middle;
+    border-right: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    padding: 6px;
+}
+
+
+table.pch  th {
+    text-align: center;
+    color: #488cf9 !important;
+    background-color:#efefef !important;
+
+    font-size: 16px;
+    border-bottom:1px solid #ddd;
+    border-right: 1px solid #ddd;
+    padding: 8px;
+}
+
+
+table.pch tr.alternate:nth-child(even) {
+    background-color: #fbfbfb;
+}
+
+table.pch th:first-child {
+    border-left: 0px;
+}
+
+table.pch th:last-child {
+    border-right: 0px;
+}
+
+table.pch tr:last-child td:first-child {
+    border-bottom: 0px;
+}
+
+table.pch tr:last-child td:last-child {
+    border-bottom: 0px;
+}
+
+table.pch tr td:first-child {
+    border-left:0px;
+}
+
+table.pch tr td:last-child {
+    border-right:0px;
+}
+
+table.pch groupBody td:last-child {
+    border-right:21px;
+}
+
+
+/*
+#####################################################################
+###                      download button                          ###
+#####################################################################
+*/
 
 a.download-arrow {
 
@@ -146,6 +181,10 @@ a.download-arrow.big {
     font-size:30px;
 }
 
+.downloadArrowWrapper {
+    padding-top: 15px;
+}
+
 a.download-arrow.small {
     padding-left:14px;
     padding-right:14px;
@@ -158,7 +197,11 @@ a.download-arrow:hover{
 }
 
 
-
+/*
+#####################################################################
+###                      table subcaptions                        ###
+#####################################################################
+*/
 
 .subcaption {
     background-color:#6d6d6d;
@@ -194,8 +237,77 @@ td.subcaption2 {
 	border-top: 1px solid #ddd !important;
 }
 
-input {
-    text-align:center;
+
+/*
+#####################################################################
+###                      resize and collapse                      ###
+#####################################################################
+*/
+
+.resizeWrapper {
+    resize: vertical;
+    overflow: auto;
+}
+
+.collapseButton {
+  background-color:#488cf9;
+  border:1px solid #488cf9;
+  border-radius: 3px;
+  height:25px;
+  width:25px;
+  padding:0px;
+
+  display: table-cell;
+  vertical-align: middle;
+
+  color:white;
+  font-weight:bold;
+  text-align:center;
+  float:right;
+  font-size: 20px;
+}
+
+.collapseButtonWrapper {
+    padding-bottom: 8px;
+}
+
+.collapseButton:hover {
+  background-color:#4870f9;
+  border:1px solid #4870f9;
+}
+
+/*No ugly frame around the text*/
+.collapseButton {
+   outline:none;
+}
+.collapseButton::-moz-focus-inner {
+   border: 0;
+}
+
+.collapseableContent {
+  padding: 0 0px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.15s ease-out;
+}
+
+
+/*
+#####################################################################
+###                        other stuff                            ###
+#####################################################################
+*/
+
+.screenFillingDiv {
+    /*max-height: 70vh; /* For 100% screen height */
+    height: 70vh;
+    width:100%;
+}
+
+.sortheader {
+    color: #488cf9 !important;
+    background-color:#efefef !important;
 }
 
 .button-wrapper {
@@ -204,10 +316,6 @@ input {
 
 .target {
     color: #287bff;
-}
-
-.jira-url {
-    color: #1b4484;
 }
 
 .button {
@@ -227,83 +335,5 @@ input {
 .standard-button:hover{
     background-color: #e8e8e8;
     color: #383838;
-}
-
-
-.status-description {
-    color:#cc3838;
-    font-weight:bold;
-}
-
-
-
- /* The alert message box */
-.alert {
-  padding: 15px;
-  background-color: #f44336; /* Red */
-  color: white;
-  margin-bottom: 15px;
-  display: none;
-  border-radius: 3px;
-
-}
-
-/* The close button */
-.closebtn {
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-/* When moving the mouse over the close button */
-.closebtn:hover {
-  color: black;
-}
-
-.alert-box-content {
-
-    font-size:15px;
-    font-weight:bold;
-}
-
-.status {
-     /*circle properties*/
-     height:14px;
-     width:14px;
-     border-radius: 50%;
-
-     display: inline-block;
-     vertical-align:middle;
-}
-
-.equal {
-     color: black;
-}
-
-.unequal {
-     color: red;
-}
-
-.single {
-     color: green;
-}
-
-.hiddenText {
-    font-size:0px;
-}
-
-
-code {
-    padding:0px !important;
-	background-color: inherit !important;
-}
-
-tr.alternate:nth-child(even) {
-    background-color: #fbfbfb;
 }
 
